syntax = "proto2";
package com.my.algorithm.proto;

option optimize_for = LITE_RUNTIME;
//option cc_enable_arenas = false;

//// For Java.
//option java_outer_classname = "ProtoPhoto";

message MsgPhoto {
    required uint64 id = 1;

    required float width = 2;
    required float height = 3;
}
